--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "startup-website-grabber",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Grabs links to startup websites.",
   "keywords": "links scrape startup 500 500co grab crawl url urls",
   "bugs": { "url" : "https://github.com/robertkeizer/startup-website-grabber/issues" },
   "license": "BSD-2-Clause",
+  "repository": { "type": "git", "url": "https://github.com/robertkeizer/startup-website-grabber.git" },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha -t 60000"
   },
