--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.3",
   "description": "Grabs links to startup websites.",
   "keywords": "links scrape startup 500 500co grab crawl url urls",
-  "bugs": { "url" : "https://github.com/robertkeizer/startup-website-grabber/issues" },
+  "bugs": {
+    "url": "https://github.com/robertkeizer/startup-website-grabber/issues"
+  },
   "license": "BSD-2-Clause",
-  "repository": { "type": "git", "url": "https://github.com/robertkeizer/startup-website-grabber.git" },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/robertkeizer/startup-website-grabber.git"
+  },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha -t 60000"
   },
@@ -13,6 +18,7 @@
   "dependencies": {
     "async": "^2.5.0",
     "cheerio": "^1.0.0-rc.2",
+    "merge": "^1.2.0",
     "request": "^2.82.0"
   },
   "devDependencies": {
