--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "async": "^2.5.0",
     "cheerio": "^1.0.0-rc.2",
     "merge": "^1.2.0",
+    "puppeteer": "^0.11.0",
     "request": "^2.82.0"
   },
   "devDependencies": {
